fixe problems with visibility on floating buttons during login

--- a/styles/global.css
+++ b/styles/global.css
@@ -170,6 +170,7 @@ body .dont-show {
 	gap: var(--spacing-2xl);
 
 	position: fixed;
+	z-index: 3;
 	top: 0;
 	right: 0;
 	bottom: 0;
